# api-x-spec

./: .env.example  .gitignore  alembic.ini  contract_test_output.txt  final_test_output.txt  full_test_output.txt  locustfile.py  mypy_output.txt  mypy_output2.txt  mypy_output3.txt  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  (+2 more)
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 7775aa36a5b2_create_users_table.py  d9bebebd4437_add_event_registrations_table.py  febfea00f420_add_events_table.py
scripts/: seed_admin.py
specs/001-auth/: spec.md
specs/001-authentication/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-jwt-role-auth/: spec.md
specs/002-event-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-event-registration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-admin-reporting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-swagger-api-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/api/: docs_metadata.py
src/application/: auth_service.py  event_service.py  registration_service.py  reporting_service.py
src/domain/: exceptions.py  models.py
src/infrastructure/: config.py
tests/: conftest.py
tests/contract/: test_admin.py  test_events_admin.py  test_events_public.py  test_login.py  test_protected.py  test_register.py  test_registrations.py  test_reports.py
tests/integration/: test_event_repository.py  test_registration_repository.py  test_reporting_repository.py  test_user_repository.py
tests/unit/: test_auth_service.py  test_event_schemas.py  test_event_service.py  test_jwt.py  test_openapi_schema.py  test_password.py  test_registration_service.py  test_reporting_service.py
(+36 files in other folders)
